# plotinus

./: CMakeLists.txt  README.md
.github/workflows/: crunch42-analysis.yml  kubesec-analysis.yml  prisma-analysis.yml  shiftleft-analysis.yml  snyk-infrastructure-analysis.yml
cmake/: GResource.cmake  Translations.cmake  ValaPrecompile.cmake  ValaVersion.cmake
data/: com.worldwidemann.plotinus.gschema.xml
src/: Command.vala  CommandExtractor.vala  CommandList.vala  InstanceSettings.vala  Keybinder.vala  Module.vala  Plotinus.vala  PopupWindow.vala  Service.vala  Utilities.vala
